// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavTabCarousel /> with links prop matches with snapshot 1`] = `
<div
  className="sc-fzozJi eGtmb"
>
  <div
    className="sc-AxhCb dobhtl"
  >
    <svg
      className="sc-AxhUy fSJeRm"
      fill="#222"
      height="5.64"
      transform="rotate(-90)"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-AxgMl lfMYHu"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-AxmLO fapxhm"
  >
    <a
      className="sc-Axmtr ifyMVg"
      href="http://www.google.com"
    />
    <a
      className="sc-Axmtr brbEnz"
      href="http://www.cowboybebop.com"
    />
    <a
      className="sc-Axmtr ifyMVg"
      href="http://www.starwars.com"
    />
  </div>
  <div
    className="sc-AxiKw grqRbr"
  >
    <div
      className="sc-AxheI ikLyOr"
    >
      Foobar 2
    </div>
    <svg
      className="sc-AxhUy fSJeRm"
      fill="#222"
      height="5.64"
      transform="rotate(90)"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;

exports[`<NavTabCarousel /> with totalIndex prop matches with snapshot 1`] = `
<div
  className="sc-fzozJi eGtmb"
>
  <div
    className="sc-AxhCb dobhtl"
  >
    <svg
      className="sc-AxhUy fSJeRm"
      fill="#222"
      height="5.64"
      transform="rotate(-90)"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-AxgMl lfMYHu"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-AxmLO fapxhm"
  >
    <div
      className="sc-Axmtr ifyMVg"
    />
    <div
      className="sc-Axmtr brbEnz"
    />
    <div
      className="sc-Axmtr ifyMVg"
    />
  </div>
  <div
    className="sc-AxiKw grqRbr"
  >
    <div
      className="sc-AxheI ikLyOr"
    >
      Foobar 2
    </div>
    <svg
      className="sc-AxhUy fSJeRm"
      fill="#222"
      height="5.64"
      transform="rotate(90)"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;
